# squarize

./: Cargo.toml  README.md
.github/workflows/: publish-crates.yml
src/: main.rs
